5.0/_sources/timetools.rst.txt
.. |Date.from_cfunits| replace:: :func:`~hydpy.core.timetools.Date.from_cfunits`
.. |Date.from_string| replace:: :func:`~hydpy.core.timetools.Date.from_string`
.. |Date.hour| replace:: :const:`~hydpy.core.timetools.Date.hour`
.. |Date.refmonth| replace:: :const:`~hydpy.core.timetools.Date.refmonth`
.. |Date.style| replace:: :const:`~hydpy.core.timetools.Date.style`
.. |Date.to_cfunits| replace:: :func:`~hydpy.core.timetools.Date.to_cfunits`
.. |Date.to_string| replace:: :func:`~hydpy.core.timetools.Date.to_string`
.. |Date| replace:: :class:`~hydpy.core.timetools.Date`
.. |False| replace:: :const:`False`
.. |None| replace:: :const:`None`
.. |Options.timestampleft| replace:: :const:`~hydpy.core.optiontools.Options.timestampleft`
.. |Options.utcoffset| replace:: :const:`~hydpy.core.optiontools.Options.utcoffset`
.. |Period.from_timedelta| replace:: :func:`~hydpy.core.timetools.Period.from_timedelta`
.. |Period.timedelta| replace:: :const:`~hydpy.core.timetools.Period.timedelta`
.. |Period.unit| replace:: :const:`~hydpy.core.timetools.Period.unit`
.. |Period| replace:: :class:`~hydpy.core.timetools.Period`
.. |RuntimeError| replace:: :class:`RuntimeError`
.. |TOY.seconds_passed| replace:: :const:`~hydpy.core.timetools.TOY.seconds_passed`
.. |TOY| replace:: :class:`~hydpy.core.timetools.TOY`
.. |Timegrid.array2series| replace:: :func:`~hydpy.core.timetools.Timegrid.array2series`
.. |Timegrid.firstdate| replace:: :const:`~hydpy.core.timetools.Timegrid.firstdate`
.. |Timegrid.from_array| replace:: :func:`~hydpy.core.timetools.Timegrid.from_array`
.. |Timegrid.from_timepoints| replace:: :func:`~hydpy.core.timetools.Timegrid.from_timepoints`
.. |Timegrid.lastdate| replace:: :const:`~hydpy.core.timetools.Timegrid.lastdate`
.. |Timegrid.modify| replace:: :func:`~hydpy.core.timetools.Timegrid.modify`
.. |Timegrid.stepsize| replace:: :const:`~hydpy.core.timetools.Timegrid.stepsize`
.. |Timegrid.to_array| replace:: :func:`~hydpy.core.timetools.Timegrid.to_array`
.. |Timegrid.to_timepoints| replace:: :func:`~hydpy.core.timetools.Timegrid.to_timepoints`
.. |Timegrid.verify| replace:: :func:`~hydpy.core.timetools.Timegrid.verify`
.. |Timegrids.eval_| replace:: :attr:`~hydpy.core.timetools.Timegrids.eval_`
.. |Timegrids.init| replace:: :attr:`~hydpy.core.timetools.Timegrids.init`
.. |Timegrids.sim| replace:: :attr:`~hydpy.core.timetools.Timegrids.sim`
.. |Timegrids.verify| replace:: :func:`~hydpy.core.timetools.Timegrids.verify`
.. |Timegrids| replace:: :class:`~hydpy.core.timetools.Timegrids`
.. |Timegrid| replace:: :class:`~hydpy.core.timetools.Timegrid`
.. |True| replace:: :const:`True`
.. |ValueError| replace:: :class:`ValueError`
.. |datetime| replace:: :mod:`~datetime`
.. |int| replace:: :class:`int`
.. |numpy| replace:: :mod:`~numpy`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |repr| replace:: :func:`repr`
.. |str| replace:: :class:`str`
.. |timetools| replace:: :mod:`~hydpy.core.timetools`
.. |datetime.datetime| replace:: :class:`~datetime.datetime`
.. |datetime.timedelta| replace:: :class:`~datetime.timedelta`
.. |numpy.nan| replace:: :const:`~numpy.nan`
.. |numpy.ndarray| replace:: :class:`~numpy.ndarray`

.. _timetools:

timetools
=========

.. automodule:: hydpy.core.timetools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
